--- a/src/components/Auth/Style/signup.css
+++ b/src/components/Auth/Style/signup.css
@@ -284,6 +284,10 @@
       padding: 0;
      z-index: 4;
 }
+.scrollable-container {
+  max-height: 70vh; /* Adjust the height as needed */
+  overflow-y: auto;
+}
 
 
 .title {
