--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'montserrat';
   line-height: 1.5;
   font-weight: 400;
 
@@ -22,7 +22,7 @@ body {
 
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Roboto", sans-serif;
+  font-family: 'montserrat';
   line-height: 1.1;
   font-weight: 500;
   color: #222222;
