--- a/src/components/Auth/Style/signup.css
+++ b/src/components/Auth/Style/signup.css
@@ -7,10 +7,10 @@
 	background-repeat: no-repeat;
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     position: fixed;
     z-index: 1;
-    padding:2rem 7%;
+    /* padding:2rem 7%; */
  }
 .user-signup-check-box {
   position: relative;
@@ -82,10 +82,10 @@
 }
 
 .main-user-signup-container {
-    margin-top: 25px;
+    margin-top: 50px;
     padding: 24px;
-    max-height: 100%;
-    height: 95%;
+    width: 450px;
+    height: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -185,14 +185,14 @@
 
   .signup-side {
     display: flex;
-    margin-left: 13vh;
-    background-size: 100% 102%;
+    margin-left: 26.8vh;
+    /* background-size: 100% 102%; */
     
   }
   
   .signup-side img {
-    width: 60dvw;
-    height: auto;
+    width: 75vh;
+    height: 75vh;
     /* display: none; */
   }
 
@@ -221,10 +221,12 @@
 }
 
 .user-signup-box input {
+    text-align: center;
     width: 100%;
     background: #e6e6e6;
     letter-spacing: 0.5px;
-    padding: 14px 64px;
+    height: 6vh;
+    padding: 0px 10px 0px 10px;
 }
 
 .user-signup-box input ~ i {
