--- a/src/components/pages/home/Style/WhyHP.css
+++ b/src/components/pages/home/Style/WhyHP.css
@@ -90,10 +90,10 @@ p {
 }
 
 .whyhp-home-section-heading2 .span1 {
-    color: #f77509;
+    color: #ff7400;
 }
 .whyhp-home-section-heading2 .span2 {
-    color: #d70100;
+    color: #fad400;
 }
 
 .main_whyhp_container .whyhp_content_container p {
